--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="https://advisory-rose-be7nhycv12-r3n1z0qz2x.edgeone.dev/file_00000000a53072078c7c887dd512fb71-removebg-preview.png" alt="Turbo Course Logo">
+                <img src="https://ibb.co.com/YB2YV1C6" alt="Turbo Course Logo">
                 <div class="logo-text">
                     <h1>Turbo Course</h1>
                     <p class="tagline">Safe. Skilled. Confident.</p>
