--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="https://ibb.co.com/YB2YV1C6" alt="Turbo Course Logo">
+                <img src="https://img.sanishtech.com/u/a2955727f30a9e007ebb0eec92890331.png" alt="Turbo Course Logo">
                 <div class="logo-text">
                     <h1>Turbo Course</h1>
                     <p class="tagline">Safe. Skilled. Confident.</p>
