--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <h3>Contact Turbo Course</h3>
                 <div class="contact-detail">
                     <i class="fas fa-map-marker-alt"></i>
-                    <p>Address: Jl. Pendidikan No. 45, Jakarta Selatan</p>
+                    <p>Address: Jl. Monjali, Mlati, Slimun, Yogyakarta</p>
                 </div>
                 <div class="contact-detail">
                     <i class="fas fa-clock"></i>
@@ -179,7 +179,7 @@
                 </div>
                 <div class="contact-detail">
                     <i class="fas fa-phone-alt"></i>
-                    <p>Phone / WhatsApp: <a href="tel:0812345678900">0812-3456-78900</a></p>
+                    <p>Phone / WhatsApp: <a href="tel:0812345678900">0823-4567-89100</a></p>
                 </div>
                 <div class="contact-detail">
                     <i class="fas fa-envelope"></i>
@@ -189,6 +189,7 @@
                     <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i> @turbocourse_id</a>
                     <a href="#" aria-label="Website"><i class="fas fa-globe"></i> www.turbocourse.com</a>
                 </div>
+                </div> class=
             </div>
             <div class="footer-bottom">
                 &copy; 2024 Turbo Course. All rights reserved.
